need to create additional method for sanitizing forecast