@@ -4,7 +4,9 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import static greencity.constant.GrammarCheckConstants.ERROR_CHECKING_GRAMMAR;
+import static greencity.constant.OpenAIConstants.COMBINED_ECO_NEWS_REQUEST;
 import static greencity.constant.OpenAIRequest.*;
+import greencity.dto.econews.EcoNewsGenericDto;
 import static greencity.log.OpenAILogMessages.*;
 import static greencity.constant.OpenAIConstants.*;
 import greencity.dto.econews.EcoNewsDto;
@@ -22,10 +24,15 @@ import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.modelmapper.ModelMapper;
+import org.springframework.boot.json.JsonParseException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import java.util.List;
 
@@ -127,9 +134,19 @@ public class AIServiceImpl implements AIService {
     }
 
     @Override
-    public List<EcoNewsDto> getRelevantEcoNewsForUser(Long userId, String language) {
+    public List<EcoNewsDto> getRelevantEcoNewsForUser(Long userId, String language,
+                                                      List<String> tags, String title, Long authorId, boolean favorite) {
+
         log.info(USER_RELEVANT_ECO_NEWS_REQUEST, userId, language);
+
         List<EcoNews> ecoNewsList = ecoNewsRepo.findAll();
+
+        ecoNewsList = ecoNewsList.stream()
+            .filter(ecoNews -> filterByTags(ecoNews, tags))
+            .filter(ecoNews -> filterByTitle(ecoNews, title))
+            .filter(ecoNews -> filterByAuthor(ecoNews, authorId))
+            .toList();
+
         List<String> habitAssigns = habitAssignRepo.fetchHabitNamesByUserId(userId);
 
         List<EcoNewsDto> relevantEcoNews = ecoNewsList.stream()
@@ -148,50 +165,71 @@ public class AIServiceImpl implements AIService {
     }
 
     @Override
-    public List<EcoNewsDto> getCombinedEcoNewsForUser(Long userId, String language) {
-        log.info("COMBINED_ECO_NEWS_REQUEST: userId={}, language={}", userId, language);
+    public Page<EcoNewsGenericDto> getCombinedEcoNewsForUser(Long userId, String language, Pageable pageable,
+                                                             List<String> tags, String title, Long authorId, boolean favorite) {
 
-        // Check if userId is null, then return general news list
+        log.info(COMBINED_ECO_NEWS_REQUEST, userId, language);
+
+        List<EcoNewsDto> combinedNews;
         if (userId == null) {
-            log.info("UserId is null, returning general eco news.");
-            List<EcoNewsDto> generalEcoNews = getGeneralEcoNews(language);
-            log.info("General eco news retrieved: size={}", generalEcoNews.size());
-            return generalEcoNews;
+            log.info(USER_ID_NULL);
+            combinedNews = getGeneralEcoNews(language, tags, title, authorId);
+        } else {
+            log.info(FETCHING_RELEVANT_ECO_NEWS, userId);
+            List<EcoNewsDto> relevantEcoNews = getRelevantEcoNewsForUser(userId, language, tags, title, authorId, favorite);
+            List<EcoNewsDto> generalEcoNews = getGeneralEcoNews(language, tags, title, authorId);
+
+            combinedNews = new ArrayList<>(relevantEcoNews);
+            combinedNews.addAll(generalEcoNews);
         }
 
-        // Get relevant news for the user if userId is present
-        log.info("Fetching relevant eco news for userId={}", userId);
-        List<EcoNewsDto> relevantEcoNews = getRelevantEcoNewsForUser(userId, language);
-        log.info("Relevant eco news retrieved: size={}", relevantEcoNews.size());
-
-        // Get general eco news
-        log.info("Fetching general eco news.");
-        List<EcoNewsDto> generalEcoNews = getGeneralEcoNews(language);
-        log.info("General eco news retrieved: size={}", generalEcoNews.size());
-
-        // Combine relevant and general news
-        log.info("Combining relevant and general eco news.");
-        List<EcoNewsDto> combinedNews = new ArrayList<>(relevantEcoNews);
-        combinedNews.addAll(generalEcoNews);
-        log.info("Combined eco news size before sorting: {}", combinedNews.size());
-
-        // Sort combined news by relevance score
-        log.info("Sorting combined eco news by relevance score.");
         List<EcoNewsDto> sortedCombinedNews = combinedNews.stream()
             .sorted(Comparator.comparingDouble(EcoNewsDto::getRelevanceScore).reversed())
             .toList();
-        log.info("Combined eco news size after sorting: {}", sortedCombinedNews.size());
 
-        log.info("COMBINED_ECO_NEWS_RETRIEVED: userId={}, size={}", userId, sortedCombinedNews.size());
-        return sortedCombinedNews;
+        log.info(COMBINED_ECO_NEWS_SIZE_AFTER_SORTING, sortedCombinedNews.size());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), sortedCombinedNews.size());
+        List<EcoNewsGenericDto> pageContent = sortedCombinedNews.subList(start, end)
+            .stream()
+            .map(this::convertToGenericDto)
+            .toList();
+
+        return new PageImpl<>(pageContent, pageable, sortedCombinedNews.size());
     }
-    private List<EcoNewsDto> getGeneralEcoNews(String language) {
+
+
+    private boolean filterByTags(EcoNews ecoNews, List<String> tags) {
+        return tags == null || tags.isEmpty() || ecoNews.getTags().stream().anyMatch(tags::contains);
+    }
+
+    private boolean filterByTitle(EcoNews ecoNews, String title) {
+        return title == null || title.isEmpty() || ecoNews.getTitle().toLowerCase().contains(title.toLowerCase());
+    }
+
+    private boolean filterByAuthor(EcoNews ecoNews, Long authorId) {
+        return authorId == null || ecoNews.getAuthor() == null || ecoNews.getAuthor().getId().equals(authorId);
+    }
+
+    private List<EcoNewsDto> getGeneralEcoNews(String language,
+                                               List<String> tags, String title, Long authorId) {
+
         log.info(GENERAL_ECO_NEWS_REQUEST, language);
+
         List<EcoNews> ecoNewsList = ecoNewsRepo.findAll();
+
+        ecoNewsList = ecoNewsList.stream()
+            .filter(ecoNews -> filterByTags(ecoNews, tags))
+            .filter(ecoNews -> filterByTitle(ecoNews, title))
+            .filter(ecoNews -> filterByAuthor(ecoNews, authorId))
+            .toList();
+
         return ecoNewsList.stream()
             .map(ecoNews -> modelMapper.map(ecoNews, EcoNewsDto.class))
-            .toList();
+            .collect(Collectors.toList());
     }
+
 
     private double calculateRelevanceScore(EcoNews ecoNews, List<String> habitNames) {
         log.info(RELEVANCE_SCORE_CALCULATION_STARTED, ecoNews, habitNames);
@@ -252,6 +290,10 @@ public class AIServiceImpl implements AIService {
     private DurationHabitDto mapToDurationHabitDto(HabitAssign habitAssign) {
         log.info(HABIT_DTO_MAPPING_STARTED, habitAssign);
         return modelMapper.map(habitAssign, DurationHabitDto.class);
+    }
+
+    private EcoNewsGenericDto convertToGenericDto(EcoNewsDto ecoNewsDto) {
+        return modelMapper.map(ecoNewsDto, EcoNewsGenericDto.class);
     }
 
     private String fetchAdvice(String language, Habit habit) {
@@ -378,6 +420,74 @@ public class AIServiceImpl implements AIService {
         return userRepo.save(user);
     }
 
+    private String sanitizeJsonResponse(String jsonResponse) {
+        jsonResponse = jsonResponse.trim();
+        jsonResponse = jsonResponse.replaceAll("\\*\\*(.*?)\\*\\*", "$1");
+        jsonResponse = jsonResponse.replaceAll("\\*(.*?)\\*", "$1");
+        jsonResponse = jsonResponse.replaceAll("(?s)```json\\s*", "").replaceAll("(?s)```\\s*$", "");
+        jsonResponse = jsonResponse.replaceAll("[“”]", "\"");
+
+        if (!isValidJson(jsonResponse)) {
+            System.out.println("Sanitized JSON is still invalid: " + jsonResponse);
+            jsonResponse = "{}";
+        }
+
+        return jsonResponse;
+    }
+    private boolean isValidJson(String json) {
+        try {
+            new ObjectMapper().readTree(json);
+            return true;
+        } catch (IOException e) {
+            return false;
+        }
+    }
+
+
+
+
+
+
+    private boolean isJsonResponseComplete(String jsonResponse) {
+        log.info(JSON_RESPONSE_VALIDATION_STARTED, jsonResponse);
+        try {
+            // Убираем пробелы с краёв
+            jsonResponse = jsonResponse.trim();
+
+            // Проверяем, если JSON не начинается и не заканчивается фигурными скобками
+            if (!jsonResponse.startsWith("{") || !jsonResponse.endsWith("}")) {
+                log.warn("JSON does not start or end with curly braces. Attempting to wrap it in {}.");
+
+                // Оборачиваем JSON в фигурные скобки
+                jsonResponse = "{" + jsonResponse + "}";
+
+                log.info("Wrapped JSON in curly braces: " + jsonResponse);
+            }
+
+            // Пробуем распарсить JSON
+            ObjectMapper objectMapper = new ObjectMapper();
+            JsonNode jsonNode = objectMapper.readTree(jsonResponse);
+
+            // Проверка обязательных ключей
+            boolean hasTitle = jsonNode.has(FORMAT_TITLE_KEY);
+            boolean hasContent = jsonNode.has(RESPONSE_JSON_CONTENT_KEY);
+
+            if (!hasTitle || !hasContent) {
+                log.warn("Incomplete JSON: Missing required fields. Title: " + hasTitle + ", Content: " + hasContent);
+            }
+
+            return hasTitle && hasContent;
+        } catch (JsonParseException e) {
+            // Логируем ошибку, если JSON некорректен
+            log.error("Error checking if JSON response is complete. Invalid format.", e);
+            return false;
+        } catch (Exception e) {
+            // Логируем другие ошибки
+            log.error("Unexpected error during JSON validation", e);
+            return false;
+        }
+    }
+
     private String extractContentFromJson(String jsonResponse) {
         log.info(RAW_JSON_LOG_MESSAGE, jsonResponse);
         int retryCount = 0;
@@ -386,50 +496,44 @@ public class AIServiceImpl implements AIService {
             try {
                 jsonResponse = sanitizeJsonResponse(jsonResponse);
 
+                // Проверка, является ли JSON завершенным
                 if (!isJsonResponseComplete(jsonResponse)) {
                     throw new IncompleteJsonException(ERROR_JSON_INCOMPLETE);
                 }
+
                 return parseContentFromJson(jsonResponse);
-            } catch (Exception e) {
+            } catch (IncompleteJsonException e) {
+                log.error("Incomplete JSON structure. Attempt: " + (retryCount + 1), e);
                 retryCount++;
                 if (retryCount >= MAX_JSON_PARSE_ATTEMPTS) {
                     throw new JsonResponseParseException(ERROR_PARSING_JSON_AFTER_ATTEMPTS
                         + MAX_JSON_PARSE_ATTEMPTS + FORMAT_ATTEMPTS_SUFFIX, e);
                 }
+            } catch (Exception e) {
+                log.error("Error parsing JSON response. Attempt: " + (retryCount + 1), e);
+                throw new JsonResponseParseException(ERROR_PARSING_JSON_AFTER_ATTEMPTS, e);
             }
         }
         throw new JsonResponseParseException(ERROR_PARSING_JSON_AFTER_ATTEMPTS);
     }
-
 
     private String parseContentFromJson(String jsonResponse) {
         log.info(JSON_CONTENT_PARSING_STARTED, jsonResponse);
         try {
             ObjectMapper objectMapper = new ObjectMapper();
             JsonNode jsonNode = objectMapper.readTree(jsonResponse);
-            return jsonNode.get(RESPONSE_JSON_CONTENT_KEY).asText();
+
+            // Параметр проверки на наличие ключа перед извлечением
+            if (jsonNode.has(RESPONSE_JSON_CONTENT_KEY)) {
+                return jsonNode.get(RESPONSE_JSON_CONTENT_KEY).asText();
+            } else {
+                throw new JsonResponseParseException("Expected key " + RESPONSE_JSON_CONTENT_KEY + " not found in JSON.");
+            }
         } catch (Exception e) {
+            log.error("Failed to parse content from JSON", e);
             throw new JsonResponseParseException(ERROR_JSON_PARSE_FAILURE, e);
         }
     }
-
-    private boolean isJsonResponseComplete(String jsonResponse) {
-        log.info(JSON_RESPONSE_VALIDATION_STARTED, jsonResponse);
-        try {
-            ObjectMapper objectMapper = new ObjectMapper();
-            JsonNode jsonNode = objectMapper.readTree(jsonResponse);
-            return jsonNode.has(FORMAT_TITLE_KEY)
-                && jsonNode.has(RESPONSE_JSON_CONTENT_KEY);
-        } catch (Exception e) {
-            return false;
-        }
-    }
-
-    private String sanitizeJsonResponse(String jsonResponse) {
-        log.info(JSON_SANITIZATION_STARTED, jsonResponse);
-        return jsonResponse.replaceAll(REGEX_NON_ALPHANUMERIC, FORMAT_EMPTY_STRING).trim();
-    }
-
 
     private boolean isWeekPassed() {
         log.info(WEEK_PASSED_CHECK_INITIATED);
